[project]
name = "langgraph-in-action"
version = "0.1.0"
description = "Sample codes for LangChain in Action"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.13"
dependencies = [
    "langchain>=0.3.27",
    "langchain-community>=0.3.27",
    "langchain-core>=0.3.74",
    "langchain-openai>=0.3.30",
    "langgraph>=0.6.6",
    "langgraph-checkpoint-sqlite>=2.0.11",
    "langgraph-prebuilt>=0.6.4",
    "langgraph-supervisor>=0.0.29",
    "langgraph-swarm>=0.0.14",
    "langmem>=0.0.29",
    "nest-asyncio>=1.6.0",
    "pyppeteer>=2.0.0",
    "python-dotenv>=1.1.1",
    "trustcall>=0.0.39",
]

[dependency-groups]
dev = [
    "ipykernel>=6.30.1",
]
